[package]
name = "workshop_uploader"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="rivalhearts_workshop"
path="src/main.rs"

[dependencies]
steamworks = "0.9.0"
iced = "0.6"
native-dialog = "0.6.3"
image = "0.24.7"
open = "5.1.2"
fs_extra = "1.3.0"
walkdir = "2.5.0"

[build-dependencies]
winres = "0.1.12"
